--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "selenium:install:ie32": "webdriver-manager update --ie32",
     "selenium:run": "webdriver-manager start",
     "e2e": "protractor src/e2e/protractor.conf.js"
+    "deploy": "gh-pages -d public"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +40,7 @@
     "css-loader": "0.25.0",
     "eslint": "3.11.1",
     "extract-text-webpack-plugin": "^2.1.0",
+    "gh-pages": "^1.0.0",
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.10.0",
     "jasmine-reporters": "^2.2.1",
