--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-stage-0": "6.16.0",
     "babel-register": "6.18.0",
     "chai": "3.5.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "0.25.0",
     "eslint": "3.11.1",
     "extract-text-webpack-plugin": "^2.1.0",
