--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf public",
+    "clean": "rimraf public build",
     "start": "webpack-dev-server  --open",
     "lint": "eslint src",
     "build": "npm run clean && npm run lint && webpack -p",
+    "analyze-bundle": "bundle-buddy public/app/*.map",
     "serve:prod": "http-server public -p 5679 -o",
     "test": "BABEL_ENV=test jest",
     "test:watch": "BABEL_ENV=test jest --watch",
@@ -24,18 +25,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "6.16.0",
     "fittextjs": "1.2.0",
-    "jquery": "3.2.1",
-    "babel-polyfill": "6.16.0"
+    "jquery": "3.2.1"
   },
   "devDependencies": {
-    "@types/jquery": "2.0.32",
     "babel-core": "6.17.0",
     "babel-jest": "17.0.2",
     "babel-loader": "6.2.5",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
     "babel-register": "6.18.0",
+    "bundle-buddy": "^0.1.2",
     "chai": "3.5.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "0.25.0",
@@ -45,7 +46,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.10.0",
     "jasmine-reporters": "^2.2.1",
-    "jest": "17.0.3",
+    "jest": "^20.0.4",
     "jsdom": "9.8.3",
     "jsdom-global": "2.1.0",
     "karma": "1.7.0",
@@ -61,9 +62,11 @@
     "mocha": "3.1.2",
     "protractor": "^5.1.2",
     "rimraf": "2.5.4",
+    "source-map-explorer": "^1.4.0",
     "style-loader": "0.13.1",
     "wallaby-webpack": "0.0.26",
     "webpack": "^2.5.1",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.4.5"
   }
 }
